tests/machine/x/pascal/query_sum_select.error
fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/query_sum_select.pas
query_sum_select.pas(23,14) Error: Incompatible types: got "TArray$1$crcFD0234A9" expected "Double"
query_sum_select.pas(26) Fatal: There were 1 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
